trying to fix overflow on load

--- a/css/map.css
+++ b/css/map.css
@@ -10,6 +10,7 @@
 .content-full-width {
 	width: 914px;
 	padding: 0 40px;
+	overflow: none;
 }
 
 #map-container {
